replace symbols with utf-8
per feedback on project1

--- a/general.html
+++ b/general.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ITMD 361 Fall 2020 Dogs (and a cat)</title>
+    <title>ITMD 361 Fall 2020 Dogs &#40;and a cat&#41;</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="media/dogfavicon.png">
@@ -15,7 +15,7 @@
         <ul class="navlist">
           <li><a class="navlink" href="index.html" title="Home">Home</a></li>
           <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
-          <li><a class="navlink" href="general.html" title="General">General (DOGS!)</a></li>
+          <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
         </ul>
       </nav>
     </header>
@@ -23,14 +23,14 @@
       <h1>Here is my family.</h1>
       <p>I have 2 dogs and a cat:</p>
       <ul class="petlist">
-        <li>Azrael is the older dog. He is am Australian Shepherd/Siberian Husky/Norwegian Elkhound mix.</li>
-        <li>Sophie is the fatter dog. She is a 130lb German Shepherd/Akita mix.</li>
+        <li>Azrael is the older dog. He is am Australian Shepherd&#47;Siberian Husky&#47;Norwegian Elkhound mix.</li>
+        <li>Sophie is the fatter dog. She is a 130lb German Shepherd&#47;Akita mix.</li>
         <li>Kizzy is the puppy. She was a foster that only lived with us for a couple weeks before moving to her permanent home.</li>
         <li>Pandora is the cat. She runs the house but is nice enough to allow the rest of us to live with her.</li>
       </ul>
       <div id="petcontain">
         <div class="imgitem">
-          <p>This is Azrael playing with our foster puppy, Kizzy.</p>
+          <p>This is Azrael playing with our foster puppy&#44; Kizzy.</p>
           <img src="media/dogs1.jpg" alt="Medium dog playing with puppy.">
         </div>
         <div class="imgitem">
@@ -38,7 +38,7 @@
           <img src="media/dogs2.jpg" alt="Medium dog with party hat.">
         </div>
         <div class="imgitem">
-          <p> This is Sophie at Azrael's birthday party.</p>
+          <p> This is Sophie at Azrael&#39;s birthday party.</p>
           <img src="media/dogs3.jpg" alt="Big dog with party hat.">
         </div>
         <div class="imgitem">
@@ -54,9 +54,9 @@
           <img src="media/dogs6.jpg" alt="Medium dog rolling around in grass.">
         </div>
         <div class="imgitem">
-          <p>Finally, here is a video of Sophie "helping" clean the yard.</p>
+          <p>Finally&#44; here is a video of Sophie &#34;helping&#34; clean the yard.</p>
           <video src="media/dogs.mp4" controls="controls" loop="loop">
-            Sorry, your browser does support videos. I assure you it was an adorable video of a German Shepherd carrying a dust pan around.
+            Sorry&#44; your browser does support videos. I assure you it was an adorable video of a German Shepherd carrying a dust pan around.
           </video>
         </div>
       </div>
