--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div id="navbar">
           <ul class="navlist">
             <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
-            <li><a class="navlink" href="general.html" title="General">General (DOGS!)</a></li>
+            <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
             <li><a class="navlink" href="index.html" title="Home">Home</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <div class="bodycontain">
-      <div><h1>Welcome to My ITMD-361 Project Home Page</h1></div>
+      <div><h1>Welcome to My ITMD&#45;361 Project Home Page</h1></div>
       <div><h2>Included are my <a href="resume.html" title="resume"> Professional Resume</a></h2></div>
-      <div><h2>and <a href="general.html" title="General"> some pictures of my dogs (and cat).</a></h2></div>
-      <div><h3>While you're here, take a look at some of my favorite vacation spots.</h3></div>
-      <div>(Click the images to open a full size version in a new window)</div>
+      <div><h2>and <a href="general.html" title="General"> some pictures of my dogs &#40;and cat&#41;.</a></h2></div>
+      <div><h3>While you're here&#44; take a look at some of my favorite vacation spots.</h3></div>
+      <div>&#40;Click the images to open a full size version in a new window&#41;</div>
     
     <div class="imgcontain">
       <div id="imgitemtoronto">
@@ -36,25 +36,25 @@
         </a>
       </div>
       <div id="imgitemarches">
-        <h4>Arches National Park, Moab, UT.</h4>
+        <h4>Arches National Park&#44; Moab&#44; UT.</h4>
         <a target="_blank" href="media/archesfull.jpg">
           <img id="archimg" src="media/archesfull.jpg" alt="Arches Panoramic.">
         </a>
       </div>
       <div id="imgitemireland">
-        <p>Giant's Causeway, Bushmills, Northern Ireland.</p>
+        <p>Giant's Causeway&#44; Bushmills&#44; Northern Ireland.</p>
         <a target="_blank" href="media/irelandfull.jpg">
           <img src="media/irelandfull.jpg" alt="Cliffside view, Northern Ireland.">
         </a>
       </div>
       <div id="imgitemskydive">
-        <h4>Skydiving - Beloit, Wisconsin.</h4>
+        <h4>Skydiving &#45; Beloit&#44; Wisconsin.</h4>
         <a target="_blank" href="media/skydivingfull.jpg">
           <img src="media/skydivingfull.jpg" alt="skydiving view of ground.">
         </a>
       </div>  
       <div id="imgitemyellowstone"> 
-        <h4>Yellowstone National Park, Idaho/Montana/Wyoming.</h4>
+        <h4>Yellowstone National Park&#44; Idaho&#47;Montana&#47;Wyoming.</h4>
         <a target="_blank" href="media/yellowstonefull.jpg">
           <img id="yellowimg" src="media/yellowstonefull.jpg" alt="hotspring in yellowstone national park.">
         </a>
