--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
       <nav id="navbar">
         <ul class="navlist">
           <li><a class="navlink" href="index.html" title="Home">Home</a></li>
-          <li><a class="navlink" href="general.html" title="General">General (DOGS!)</a></li>
+          <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
           <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
         </ul>
       </nav>
@@ -22,56 +22,56 @@
     <div id="restext">
       <section id="contactinfocontain">
         <div id="name">Joshua T Lau</div>
-        <div id="number">(708) 533-0143</div>
-        <div id="email1">Joshua.Lau1@gmail.com</div>
-        <div id="email2">JLau1@hawk.iit.edu</div>
+        <div id="number">&#40;708&#41; 533&#45;0143</div>
+        <div id="email1">JoshuaLau1&#64;gmail.com</div>
+        <div id="email2">JLau1&#64;hawk.iit.edu</div>
       </section>
       <section id="summary">
         <h3>Summary</h3>
         <p>Experienced System Administrator and Technology Director with expertise across industries.</p>
-        <p>Proven track record of performance in Finance IT, Educational IT, Network implementation, MSP, Break/Fix, and Management roles.</p>
+        <p>Proven track record of performance in Finance IT&#44; Educational IT&#44; Network implementation&#44; MSP&#44; Break&#47;Fix&#44; and Management roles.</p>
       </section>
       <section id="experience">
         <h3>Experience</h3>
-        <h4>ACAP Fund GP, LLC</h4>
-        <h5>Senior Director, Information Systems and Technology | June, 2020 - Present</h5>
+        <h4>CAP Fund GP&#44; LLC</h4>
+        <h5>Senior Director&#44; Information Systems and Technology &#124; June&#44; 2020 &#45; Present</h5>
         <ul>
           <li>Built the entire IT infrastructure for specialty loan processing startup.</li>
           <li>Oversaw integration between development teams creating an end to end loan servicing platform.</li>
           <li>Responsible for all aspects of back end infrastructure and internal support.</li>
         </ul>
-        <h4>ExWorks Capital, LLC / RedRidge Finance Group</h4>
-        <h5>Director, Information Systems and Technology | January, 2017 - Present</h5>
+        <h4>ExWorks Capital&#44; LLC &#47; RedRidge Finance Group</h4>
+        <h5>Director&#44; Information Systems and Technology &#124; January&#44; 2017 &#45; Present</h5>
         <ul>
           <li>Hired to overhaul entire IT system.</li>
-          <li>Oversaw the build-out and implementation of a multi-site environment across all US and UK based offices.</li>
-          <li>Designed, built, and tested a comprehensive Business Continuity and Disaster Recovery (BCDR) plan.</li>
-          <li>Implemented the BCDR plan to successfully transition to a 100% remote workforce due to COVID-19 with no interruptions.</li>
-          <li>Built and managed a loan origination platform to handle 4,000+ Paycheck Protection Program loans.</li>
+          <li>Oversaw the build&#45;out and implementation of a multi&#45;site environment across all US and UK based offices.</li>
+          <li>Designed&#44; built&#44; and tested a comprehensive Business Continuity and Disaster Recovery &#40;BCDR&#41; plan.</li>
+          <li>Implemented the BCDR plan to successfully transition to a 100&#37; remote workforce due to COVID&#45;19 with no interruptions.</li>
+          <li>Built and managed a loan origination platform to handle 4&#44;000&#43; Paycheck Protection Program loans.</li>
           <li>Maintained full systems regulatory and client compliance.</li>
         </ul>
-        <h4>Smart Technology Services, Inc.</h4>
-        <h5>Field Service Technician / Network Engineer | September, 2012 - October, 2017</h5>
+        <h4>Smart Technology Services&#44; Inc.</h4>
+        <h5>Field Service Technician &#47; Network Engineer &#124; September&#44; 2012 &#45; October&#44; 2017</h5>
         <ul>
-          <li>Performed on-site network hardware installation and configuration for individuals, SMBs, and educational institutions/libraries.</li>
-          <li>Provided end user hardware and software support, network support, server support, and IMACs for Chicago Public Schools, Citizens Bank, and other public sector and private clients.</li>
-          <li>Created, evaluated, and deployed Windows and Linux image servers and custom software images.</li>
+          <li>Performed on&#45;site network hardware installation and configuration for individuals&#44; SMBs&#44; and educational institutions&#47;libraries.</li>
+          <li>Provided end user hardware and software support&#44; network support&#44; server support&#44; and IMACs for Chicago Public Schools&#44; Citizens Bank&#44; and other public sector and private clients.</li>
+          <li>Created&#44; evaluated&#44; and deployed Windows and Linux image servers and custom software images.</li>
           <li>Managed Apple diagnostic and file servers</li>
-          <li>Provided support to a fully staffed help desk, walk-in customers, and other support contracts.</li>
-          <li>Supervised and verified customer orders for hand-assembled computer equipment.</li>
+          <li>Provided support to a fully staffed help desk&#44; walk&#45;in customers&#44; and other support contracts.</li>
+          <li>Supervised and verified customer orders for hand&#45;assembled computer equipment.</li>
         </ul>
       </section>
       <section id="skillsandcerts">
         <h3>Skills</h3>
         <ul>
-          <li>Experienced in large-scale, time-sensitive environment, working with all levels of equipment, from network infrastructure and servers to desktop printers and cell phones.</li>
-          <li>CompTIA A+ and Network+</li>
+          <li>Experienced in large&#45;scale&#44; time&#45;sensitive environment&#44; working with all levels of equipment&#44; from network infrastructure and servers to desktop printers and cell phones.</li>
+          <li>CompTIA A&#43; and Network&#43;</li>
           <li>Eager to learn new technologies</li>
           <li>Multiple vendor certifications:
             <ul>
               <li>Apple ACMT and ACIT</li>
-              <li>Lenovo Desktop, Laptop, Tablet, and Server</li>
-              <li>Dell Desktop, Laptop, Tablet, and Server</li>
+              <li>Lenovo Desktop&#44; Laptop&#44; Tablet&#44; and Server</li>
+              <li>Dell Desktop&#44; Laptop&#44; Tablet&#44; and Server</li>
               <li>Samsung Chromebook</li>
             </ul>
           </li>
