--- a/general.html
+++ b/general.html
@@ -31,27 +31,39 @@
       <div id="petcontain">
         <div class="imgitem">
           <p>This is Azrael playing with our foster puppy&#44; Kizzy.</p>
-          <img src="media/dogs1.jpg" alt="Medium dog playing with puppy.">
+          <a target="_blank" href="media/dogs1full.jpg">
+            <img src="media/dogs1full.jpg" alt="Medium dog playing with puppy.">
+          </a>
         </div>
         <div class="imgitem">
           <p>This is Azrael at his 9th birthday party.</p> 
-          <img src="media/dogs2.jpg" alt="Medium dog with party hat.">
+          <a target="_blank" href="media/dogs2full.jpg">
+            <img src="media/dogs2full.jpg" alt="Medium dog with party hat.">
+          </a>
         </div>
         <div class="imgitem">
           <p> This is Sophie at Azrael&#39;s birthday party.</p>
-          <img src="media/dogs3.jpg" alt="Big dog with party hat.">
+          <a target="_blank" href="media/dogs3full.jpg">
+            <img src="media/dogs3full.jpg" alt="Big dog with party hat.">
+          </a>
         </div>
         <div class="imgitem">
           <p>This is Sophie pretending to be a reindeer.</p>
-          <img src="media/dogs4.jpg" alt="Big dog with antler hat">
+          <a target="_blank" href="media/dogs4full.jpg">
+            <img src="media/dogs4full.jpg" alt="Big dog with antler hat">
+          </a>
         </div>
         <div class="imgitem">
           <p>This is Azrael playing with Pandora (the cat).</p>
-          <img src="media/dogs5.jpg" alt="Medium dog playing with cat.">
+          <a target="_blank" href="media/dogs5full.jpg">
+            <img src="media/dogs5full.jpg" alt="Medium dog playing with cat.">
+          </a>
         </div>
         <div class="imgitem">
           <p>This is Azrael rolling around in the yard.</p>
-          <img src="media/dogs6.jpg" alt="Medium dog rolling around in grass.">
+           <a target="_blank" href="media/dogs6full.jpg">
+            <img src="media/dogs6full.jpg" alt="Medium dog rolling around in grass.">
+          </a>
         </div>
         <div class="imgitem">
           <p>Finally&#44; here is a video of Sophie &#34;helping&#34; clean the yard.</p>
