--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body id="homebody">
     <header id="navcontainer">
       <nav>
-        <div id="navbar">
-          <ul class="navlist">
+        <div class="navlist">
+          <ul id="navbar" >
             <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
             <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
             <li><a class="navlink" href="index.html" title="Home">Home</a></li>
