--- a/general.html
+++ b/general.html
@@ -11,12 +11,14 @@
   </head>
   <body id="genbody">
     <header id="navcontainer">
-      <nav id="navbar">
-        <ul class="navlist">
-          <li><a class="navlink" href="index.html" title="Home">Home</a></li>
-          <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
-          <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
-        </ul>
+      <nav>
+        <div class="navlist">
+          <ul id="navbar" >
+            <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
+            <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
+            <li><a class="navlink" href="index.html" title="Home">Home</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <div class="bodycontain">  
