--- a/resume.html
+++ b/resume.html
@@ -10,13 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
   </head>
   <body id="resbody">
-    <header id="navcontainer">
-      <nav id="navbar">
-        <ul class="navlist">
-          <li><a class="navlink" href="index.html" title="Home">Home</a></li>
-          <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
-          <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
-        </ul>
+<header id="navcontainer">
+      <nav>
+        <div class="navlist">
+          <ul id="navbar" >
+            <li><a class="navlink" href="resume.html" title="resume">Resume</a></li>
+            <li><a class="navlink" href="general.html" title="General">General &#40;DOGS&#33;&#41;</a></li>
+            <li><a class="navlink" href="index.html" title="Home">Home</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <div id="restext">
@@ -33,7 +35,7 @@
       </section>
       <section id="experience">
         <h3>Experience</h3>
-        <h4>CAP Fund GP&#44; LLC</h4>
+        <h4>ACAP Fund GP&#44; LLC</h4>
         <h5>Senior Director&#44; Information Systems and Technology &#124; June&#44; 2020 &#45; Present</h5>
         <ul>
           <li>Built the entire IT infrastructure for specialty loan processing startup.</li>
